~/.zcash -> ~/.zclassic, -r Author:    Jon Layton <jon@seequ.com>
Changes to be committed:
	modified:   .github/ISSUE_TEMPLATE.md
	modified:   .gitignore
	renamed:    contrib/debian/examples/zcash.conf -> contrib/debian/examples/zclassic.conf
	modified:   contrib/debian/zcash.examples
	modified:   doc/amqp.md
	modified:   doc/files.md
	modified:   doc/man/zcash-cli.1
	modified:   doc/man/zcashd.1
	modified:   doc/release-notes/release-notes-0.11.2.z3.md
	modified:   doc/release-notes/release-notes-1.0.0-rc3.md
	modified:   doc/release-notes/release-notes-1.0.5.md
	modified:   doc/release-process.md
	modified:   doc/wallet-backup.md
	modified:   doc/zmq.md
	modified:   qa/pull-tester/run-bitcoind-for-test.sh.in
	modified:   qa/rpc-tests/test_framework/util.py
	modified:   qa/zcash/performance-measurements.sh
	modified:   src/bitcoin-cli.cpp
	modified:   src/bitcoind.cpp
	modified:   src/init.cpp
	modified:   src/metrics.cpp
	modified:   src/rpcmining.cpp
	modified:   src/util.cpp
	modified:   src/util.h

--- a/qa/pull-tester/run-bitcoind-for-test.sh.in
+++ b/qa/pull-tester/run-bitcoind-for-test.sh.in
@@ -4,10 +4,10 @@
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 #
 ZCASH_LOAD_TIMEOUT=500
-DATADIR="@abs_top_builddir@/.zcash"
+DATADIR="@abs_top_builddir@/.zclassic"
 rm -rf "$DATADIR"
 mkdir -p "$DATADIR"/regtest
-touch "$DATADIR/zcash.conf"
+touch "$DATADIR/zclassic.conf"
 touch "$DATADIR/regtest/debug.log"
 tail -q -n 1 -F "$DATADIR/regtest/debug.log" | grep -m 1 -q "Done loading" &
 WAITER=$!
