--- a/contrib/debian/examples/zclassic.conf
+++ b/contrib/debian/examples/zclassic.conf
@@ -1,10 +1,10 @@
 ##
-## zcash.conf configuration file. Lines beginning with # are comments.
+## zclassic.conf configuration file. Lines beginning with # are comments.
 ##
 
 # Network-related settings:
 
-# Run on the test network instead of the real zcash network.
+# Run on the test network instead of the real zclassic network.
 #testnet=0
 
 # Run a regression test network
@@ -72,7 +72,7 @@
 #rpcpassword=YourSuperGreatPasswordNumber_DO_NOT_USE_THIS_OR_YOU_WILL_GET_ROBBED_385593
 
 # How many seconds zcash will wait for a complete RPC HTTP request.
-# after the HTTP connection is established. 
+# after the HTTP connection is established.
 #rpcclienttimeout=30
 
 # By default, only RPC connections from localhost are allowed.
@@ -80,7 +80,7 @@
 # either as a single IPv4/IPv6 or with a subnet specification.
 
 # NOTE: opening up the RPC port to hosts outside your local trusted network is NOT RECOMMENDED,
-# because the rpcpassword is transmitted over the network unencrypted and also because anyone 
+# because the rpcpassword is transmitted over the network unencrypted and also because anyone
 # that can authenticate on the RPC port can steal your keys + take over the account running zcashd
 # For more information see https://github.com/zcash/zcash/issues/1497
 
@@ -122,8 +122,6 @@
 
 # Pay an optional transaction fee every time you send zcash.  Transactions with fees
 # are more likely than free transactions to be included in generated blocks, so may
-# be validated sooner. This setting does not affect private transactions created with 
+# be validated sooner. This setting does not affect private transactions created with
 # 'z_sendmany'.
 #paytxfee=0.00
-
-
