--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -1,8 +1,8 @@
 ---
-name: "bitcoin-win-0.11"
+name: "zclassic-win-1.0.14"
 enable_cache: true
 suites:
-- "trusty"
+- "xenial"
 architectures:
 - "amd64"
 packages:
@@ -21,8 +21,8 @@ packages:
 - "ca-certificates"
 - "python"
 remotes:
-- "url": "https://github.com/bitcoin/bitcoin.git"
-  "dir": "bitcoin"
+- "url": "https://github.com/ZclassicDev/zclassic.git"
+  "dir": "zclassic"
 files: []
 script: |
   WRAP_DIR=$HOME/wrapped
