The Zclassic Team - official designation and repos
v1.1.1 is on official dev branch until ready for release, update docs and comments regarding Zclassic development and contact info, we are official! ZclassicDev => z-classic

the old Java Swing Wallet is no longer compatible and must be rebuilt, OverWinter Activation was delayed due to backlogs in team transition

--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -25,7 +25,7 @@ packages:
 - "wget"
 - "zlib1g-dev"
 remotes:
-- "url": "https://github.com/ZclassicDev/zclassic.git"
+- "url": "https://github.com/z-classic/zclassic.git"
   "dir": "zclassic"
 files: []
 script: |
