--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -2,13 +2,13 @@ Source: zclassic
 Section: utils
 Priority: optional
 Maintainer: Zclassic Community <team@zclassic-ce.org>
-Homepage: http://zclassic-ce.org
+Homepage: http://zclassic.org
 Build-Depends: autoconf, automake, bsdmainutils, build-essential,
  git, g++-multilib, libc6-dev, libtool,
  m4, ncurses-dev, pkg-config, python,
  unzip, wget, zlib1g-dev
-Vcs-Git: https://github.com/ZclassicDev/zclassic.git
-Vcs-Browser: https://github.com/ZclassicDev/zclassic
+Vcs-Git: https://github.com/z-classic/zclassic.git
+Vcs-Browser: https://github.com/z-classic/zclassic
 
 Package: zclassic
 Version: 1.1.1
@@ -17,5 +17,5 @@ Description: HTTPS for money.
  Based on Bitcoin's code, it intends to offer a far higher standard
  of privacy and anonymity through a sophisticated zero-knowledge
  proving scheme which preserves confidentiality of transaction metadata.
- This package provides the daemon, zcashd/ZCLd, and the CLI tool,
- zcash-cli/ZCLi, to interact with the daemon.
+ This package provides the daemon, zcashd/zcld, and the CLI tool,
+ zcash-cli/zcl-cli, to interact with the daemon.
